2008-12-21  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 564102 – _wrap_g_output_stream_write_async not adding a
	reference to the buffer passed

	* gio/gio.override (pygio_notify_copy_buffer): New function.
	(pygio_free_notify): Free new `buffer' field if it is set.

	* gio/goutputstream.override (_wrap_g_output_stream_write_async):
	Copy the buffer with new pygio_notify_copy_buffer() and use the
	copy for g_output_stream_write_async() call.

	* gio/gfile.override (_wrap_g_file_replace_contents_async): Same
	as for _wrap_g_output_stream_write_async().

2008-12-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 555613 – gio.VolumeMonitor segfaults

	* gio/gvolumemonitor.override (_wrap_g_volume_monitor_tp_new):
	Unconditionally raise TypeError.

2008-12-03  Paul Pogonyshev  <pogonyshev@gmx.net>

	* glib/pyglib.c (pyglib_error_check): Test if `domain' is not-null
	before using it (avoids segfaults, see bug #561826).

2008-09-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/goutputstream.override
	(g_output_stream_write_all): use gsize instead of gssize.

2008-09-10  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 530935 – pygobject_set_properties doesnt release the GIL

	* gobject/pygobject.c (pygobject_set_properties): Reuse
	set_property_from_pspec() which release GIL for us.  Also make
	sure that g_object_thaw_notify() is called even after error.

2008-09-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 549517 – add __repr__ to gio.Drive, gio.Mount and gio.Volume

	* gio/gio.override (_wrap_g_drive_tp_repr, _wrap_g_mount_tp_repr):
	New functions.

	* gio/gvolume.override (_wrap_g_volume_tp_repr): New function.

2008-09-09  Loïc Minier  <lool@dooz.org>

	Bug 551227 – Missing AC_CONFIG_MACRO_DIR([m4])

	* configure.ac: Add AC_CONFIG_MACRO_DIR.

2008-09-08  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 551056 – make codegen not import when corresponding argument
	types are not registered

	* codegen/override.py (import_pat): Add support for optional 'for'
	clause.